# video-pubsub-rs

./: Cargo.toml  README.md
publisher/: Cargo.toml
publisher/src/: main.rs
src/: models.rs
subscriber/: Cargo.toml
subscriber/src/: main.rs
